
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_10__ TYPE_3__ ;
typedef struct TYPE_9__ TYPE_2__ ;
typedef struct TYPE_8__ TYPE_1__ ;


struct TYPE_9__ {int w; int h; int linew; char* data; TYPE_1__* format; void* owner; } ;
typedef TYPE_2__ vncBuffer ;
struct TYPE_8__ {void* trueColour; } ;
struct TYPE_10__ {char* frameBuffer; int port; int listenSock; TYPE_1__ serverFormat; int deferUpdateTime; int inetdSock; void* neverShared; void* alwaysShared; void* httpPort; int kbdAddEvent; int ptrAddEvent; int desktopName; } ;
typedef int BOOL ;


 void* FALSE ;
 void* TRUE ;
 void* client_counter ;
 int defer_time ;
 int fprintf (int ,char*,int,int) ;
 TYPE_2__* frameBuffer ;
 int g_height ;
 int g_title ;
 int g_width ;
 int init_keyboard () ;
 scalar_t__ malloc (int) ;
 int* reverseByte ;
 int rfbClientSocket ;
 TYPE_3__* rfbGetScreen (int ,int *,int,int,int,int,int) ;
 int rfbInitServer (TYPE_3__*) ;
 int rfbInitSockets (TYPE_3__*) ;
 int rfb_port ;
 TYPE_3__* server ;
 int stderr ;
 int ui_set_clip (int ,int ,int,int) ;
 int vncKey ;
 int vncMouse ;

BOOL
ui_create_window()
{
 int i;

 for (i = 0; i < 0x100; i++)
  reverseByte[i] =
   (((i >> 7) & 1)) | (((i >> 6) & 1) << 1) | (((i >> 5) & 1) << 2) |
   (((i >> 4) & 1) << 3) | (((i >> 3) & 1) << 4) | (((i >> 2) & 1) << 5) |
   (((i >> 1) & 1) << 6) | (((i >> 0) & 1) << 7);

 server = rfbGetScreen(0, ((void*)0), g_width, g_height, 8, 1, 1);
 server->desktopName = g_title;
 server->frameBuffer = (char *) malloc(g_width * g_height);
 server->ptrAddEvent = vncMouse;
 server->kbdAddEvent = vncKey;







 server->port = -1;
 server->alwaysShared = FALSE;
 server->neverShared = FALSE;

 server->inetdSock = rfbClientSocket;
 server->serverFormat.trueColour = FALSE;
 server->deferUpdateTime = defer_time;

 frameBuffer = (vncBuffer *) malloc(sizeof(vncBuffer));
 frameBuffer->w = g_width;
 frameBuffer->h = g_height;
 frameBuffer->linew = g_width;
 frameBuffer->data = server->frameBuffer;
 frameBuffer->owner = FALSE;
 frameBuffer->format = &server->serverFormat;

 ui_set_clip(0, 0, g_width, g_height);

 rfbInitServer(server);

 server->port = rfb_port;





 init_keyboard();

 return (server != ((void*)0));
}
